--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
+/* // <weight>: Use a value from 300 to 900
+// <uniquifier>: Use a unique and descriptive class name */
+
+/* .rubik-<uniquifier > {
+  font-family: "Rubik", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+} */
+
+* {
+  font-family: "Rubik", serif;
+}
+
 body::before {
   display: block;
   content: "";
